--- a/DS_MakeFeatures_AssignMent_Arijit_Sengupta.ipynb
+++ b/DS_MakeFeatures_AssignMent_Arijit_Sengupta.ipynb
@@ -6,7 +6,7 @@
       "name": "DS_MakeFeatures_AssignMent_Arijit_Sengupta.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMOKQ8eX6hI9VRkh/QeEjj8",
+      "authorship_tag": "ABX9TyNCwU3nMbfqNd261ATswWsw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1754,7 +1754,7 @@
         "  year_yyyy=fields_date[1]  \n",
         "  return year_yyyy\n",
         "\n",
-        "random_Date='02-1987'\n",
+        "random_Date='Oct-1987'\n",
         "print('Year of reandom date '+random_Date+' is '+getYear(random_Date))"
       ],
       "metadata": {
@@ -1762,15 +1762,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B3j2P5r9Bdsy",
-        "outputId": "606525bf-9451-4a99-be6f-359e72caab3e"
+        "outputId": "7d2bc224-8776-4177-d267-3abd5cb9c14d"
       },
-      "execution_count": 28,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Year of reandom date 1987-02 is 1987\n"
+            "Year of reandom date Oct-1987 is 1987\n"
           ]
         }
       ]
@@ -1831,24 +1831,24 @@
           "height": 206
         },
         "id": "9ZUWOF5_IJ8G",
-        "outputId": "e6e55019-a8bd-4ca4-b92e-1963c55e0066"
+        "outputId": "d8087b45-365b-4439-a38a-706d8d529184"
       },
-      "execution_count": 30,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "  Earliest_Credit_Year earliest_cr_line\n",
-              "0                  Oct         Oct-1998\n",
-              "1                  Sep         Sep-2015\n",
-              "2                  Jun         Jun-2003\n",
-              "3                  Feb         Feb-2005\n",
-              "4                  Feb         Feb-2008"
+              "0                 1998         Oct-1998\n",
+              "1                 2015         Sep-2015\n",
+              "2                 2003         Jun-2003\n",
+              "3                 2005         Feb-2005\n",
+              "4                 2008         Feb-2008"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c7527597-213e-4056-baf1-77e486430e33\">\n",
+              "  <div id=\"df-eab6bb3c-a6dc-4304-9feb-57d14f3d3085\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1875,33 +1875,33 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>Oct</td>\n",
+              "      <td>1998</td>\n",
               "      <td>Oct-1998</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>Sep</td>\n",
+              "      <td>2015</td>\n",
               "      <td>Sep-2015</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>Jun</td>\n",
+              "      <td>2003</td>\n",
               "      <td>Jun-2003</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>Feb</td>\n",
+              "      <td>2005</td>\n",
               "      <td>Feb-2005</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>Feb</td>\n",
+              "      <td>2008</td>\n",
               "      <td>Feb-2008</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c7527597-213e-4056-baf1-77e486430e33')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-eab6bb3c-a6dc-4304-9feb-57d14f3d3085')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1952,12 +1952,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c7527597-213e-4056-baf1-77e486430e33 button.colab-df-convert');\n",
+              "          document.querySelector('#df-eab6bb3c-a6dc-4304-9feb-57d14f3d3085 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c7527597-213e-4056-baf1-77e486430e33');\n",
+              "          const element = document.querySelector('#df-eab6bb3c-a6dc-4304-9feb-57d14f3d3085');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1980,7 +1980,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 36
         }
       ]
     },
@@ -2009,24 +2009,24 @@
           "height": 206
         },
         "id": "jl8g_p_VJmh8",
-        "outputId": "729b1b0b-35f6-4dc9-c236-e7f23e985e63"
+        "outputId": "55da9a83-c877-43c2-d3d8-2f9d027703d6"
       },
-      "execution_count": 32,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "  Issue_Year   issue_d\n",
-              "0        Dec  Dec-2018\n",
-              "1        Oct  Oct-2018\n",
-              "2        Oct  Oct-2018\n",
-              "3        Nov  Nov-2018\n",
-              "4        Dec  Dec-2018"
+              "0       2018  Dec-2018\n",
+              "1       2018  Oct-2018\n",
+              "2       2018  Oct-2018\n",
+              "3       2018  Nov-2018\n",
+              "4       2018  Dec-2018"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-436239ac-a97b-40b8-afab-e12cf0f8e092\">\n",
+              "  <div id=\"df-9aca3a16-ea9b-4376-8b35-3b8889e4e845\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2053,33 +2053,33 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>Dec</td>\n",
+              "      <td>2018</td>\n",
               "      <td>Dec-2018</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>Oct</td>\n",
+              "      <td>2018</td>\n",
               "      <td>Oct-2018</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>Oct</td>\n",
+              "      <td>2018</td>\n",
               "      <td>Oct-2018</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>Nov</td>\n",
+              "      <td>2018</td>\n",
               "      <td>Nov-2018</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>Dec</td>\n",
+              "      <td>2018</td>\n",
               "      <td>Dec-2018</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-436239ac-a97b-40b8-afab-e12cf0f8e092')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9aca3a16-ea9b-4376-8b35-3b8889e4e845')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2130,12 +2130,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-436239ac-a97b-40b8-afab-e12cf0f8e092 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9aca3a16-ea9b-4376-8b35-3b8889e4e845 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-436239ac-a97b-40b8-afab-e12cf0f8e092');\n",
+              "          const element = document.querySelector('#df-9aca3a16-ea9b-4376-8b35-3b8889e4e845');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2158,7 +2158,236 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Task 10:"
+      ],
+      "metadata": {
+        "id": "TpdxbuOcLhMu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a new column called Credit_History_Years which is the difference between Issue_Year and Earliest_Credit_Year\n",
+        "loans=loans.copy()\n",
+        "loans[['Issue_Year','Earliest_Credit_Year']].head()\n",
+        "loans['Credit_History_Years']= loans['Issue_Year'].astype(float) -loans['Earliest_Credit_Year'].astype(float)\n",
+        "loans['Credit_History_Years'].dtype\n",
+        "loans['Credit_History_Days']=loans['Credit_History_Years']*365.25\n",
+        "loans[['Issue_Year','Earliest_Credit_Year','Credit_History_Years','Credit_History_Days']].head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "id": "s7g1ww_zLnmZ",
+        "outputId": "8ac12f5f-bd83-4f46-cc73-d37bb904dcd0"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "  Issue_Year Earliest_Credit_Year  Credit_History_Years  Credit_History_Days\n",
+              "0       2018                 1998                  20.0              7305.00\n",
+              "1       2018                 2015                   3.0              1095.75\n",
+              "2       2018                 2003                  15.0              5478.75\n",
+              "3       2018                 2005                  13.0              4748.25\n",
+              "4       2018                 2008                  10.0              3652.50"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-3a79be7a-3111-4d26-9d52-843366e6cd75\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Issue_Year</th>\n",
+              "      <th>Earliest_Credit_Year</th>\n",
+              "      <th>Credit_History_Years</th>\n",
+              "      <th>Credit_History_Days</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2018</td>\n",
+              "      <td>1998</td>\n",
+              "      <td>20.0</td>\n",
+              "      <td>7305.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2018</td>\n",
+              "      <td>2015</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1095.75</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2018</td>\n",
+              "      <td>2003</td>\n",
+              "      <td>15.0</td>\n",
+              "      <td>5478.75</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2018</td>\n",
+              "      <td>2005</td>\n",
+              "      <td>13.0</td>\n",
+              "      <td>4748.25</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2018</td>\n",
+              "      <td>2008</td>\n",
+              "      <td>10.0</td>\n",
+              "      <td>3652.50</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3a79be7a-3111-4d26-9d52-843366e6cd75')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-3a79be7a-3111-4d26-9d52-843366e6cd75 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-3a79be7a-3111-4d26-9d52-843366e6cd75');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Task 11:"
+      ],
+      "metadata": {
+        "id": "KHHkswzbPijG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Find the maximum values in the Credit_History_Years column and assign it to the variable max_credit\n",
+        "max_credit=loans['Credit_History_Years'].max()\n",
+        "round(max_credit,2)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HpKXO4FRPliG",
+        "outputId": "65f5d52f-c252-42f7-d1ff-45d37bb53ced"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "68.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
         }
       ]
     }
